--- a/YSG.css/index.css
+++ b/YSG.css/index.css
@@ -9,9 +9,9 @@
 }
 .big-box{
 	border: solid 1px #E3E3E3;
-	width: 345px;
+	width: 92%;
 	height: 295px;
-	margin:15px 3.6%;
+	margin:15px 4%;
 	box-shadow: 0px 0px 10px #E3E3E3;
 	overflow: hidden;
 }
