--- a/css/wxParse.css
+++ b/css/wxParse.css
@@ -57,6 +57,9 @@
   padding: 0;
   counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
 }
+.ql-editor p img{
+	width:100%
+}
 .ql-editor ol,
 .ql-editor ul {
   padding-left: 1.5em;
